--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     <div class="wrapper">
       <header>
         <h1>Caitlynkodric.GitHub.io</h1>
-        <p></p>
+        <p><img src="imageimage.gif"</p>
 
 
         <p class="view"><a href="https://github.com/caitlynkodric">View My GitHub Profile</a></p>
