--- a/index.html
+++ b/index.html
@@ -1,9 +1,8 @@
 <html>
-<head>Caitlyn Kodric<title>
-  <link rel="stylesheet" type="text/css" href="styles.css">
-  <link rel="bootstrap" type="text/css" href="bootstrap.css">
-</title>
+<head><title>
+Caitlyn Kodric
 </head>
+<link rel="stylesheet" type="text/css" href="styles.css">
 <body>
 <p>
 Work in Progress
