--- a/index.html
+++ b/index.html
@@ -1,8 +1,9 @@
 <html>
 <head><title>
-Caitlyn Kodric
-</head>
+Caitlyn Kodric</title>
 <link rel="stylesheet" type="text/css" href="styles.css">
+</head>
+
 <body>
 <p>
 Work in Progress
