fixes photos in project

--- a/projects.html
+++ b/projects.html
@@ -9,11 +9,11 @@ title: projects
 			<h1>My Projects</h1>
 			
 			<div class="col-lg-6 col-md-6 col-sm-6 gallery">
-				<a href="aqua.html"><img src="assets/img/aquaBicylinder/prototype.jpg" class="img-responsive img-rounded projectImage"></a>
+				<a href="aqua.html"><img src="assets/img/aquabicylinder/prototype.jpg" class="img-responsive img-rounded projectImage"></a>
 				<p>AquaBicylinder</p>
 			</div>
 			<div class="col-lg-6 col-md-6 col-sm-6 gallery">
-				<a href="pasta.html"><img src="assets/img/portfolio/folio02.png" class="img-responsive img-rounded projectImage"></a>
+				<a href="pasta.html"><img src="assets/img/aquabicylinder/prototype.jpg" class="img-responsive img-rounded projectImage"></a>
 				<p>SOLIDWORKS</p>
 			</div>
 			<div class="col-lg-6 col-md-6 col-sm-6 gallery">
