fixes MAJiK link

--- a/experience.html
+++ b/experience.html
@@ -9,7 +9,7 @@ title: experience
 			<h1>My Experience</h1>
 			
 			<div class="col-lg-6 col-md-6 col-sm-6 gallery">
-				<a href="www.majik.io" target="_blank"><img src="assets/img/experience/MajikSystemsLogo.png" class="img-responsive img-rounded"></a>
+				<a href="http://www.majik.io" target="_blank"><img src="assets/img/experience/MajikSystemsLogo.png" class="img-responsive img-rounded"></a>
 				<div>
 					<h4>Front-End Developer</h4>
 					<h6>Sept. to Dec. 2016</h6>
