--- a/aqua.html
+++ b/aqua.html
@@ -6,7 +6,7 @@ description: helakjflkdjsalkfdj
 ---
 
 <div class="fade">
-    <div><iframe class="aqua-video" width="600" height="400" src="https://www.youtube.com/embed/9eBJzZ_8eOc" frameborder="0" allowfullscreen=""></iframe></div>
+    <div><iframe class="aqua-video" width="100%" height="400px" src="https://www.youtube.com/embed/9eBJzZ_8eOc" frameborder="0" allowfullscreen=""></iframe></div>
     <div><img src="assets/img/aquabicylinder/cad.jpg" class="img-responsive img-rounded"></div>
     <div><img src="assets/img/aquabicylinder/prototype.jpg" class="img-responsive img-rounded"></div>
 </div>
