adds content to experience

--- a/experience.html
+++ b/experience.html
@@ -13,10 +13,17 @@ title: experience
 				<div>
 					<h4>Front-End Developer</h4>
 					<h6>Sept. to Dec. 2016</h6>
-					<p>What I did there</p>
-					<p>
-						<a class="maijkLinks" href="http://velocity.uwaterloo.ca/companies/majik-systems/"target="_blank">http://velocity.uwaterloo.ca/companies/majik-systems/</a>
-						<a class="maijkLinks" href="http://www.automationmag.com/industry-news/movers-and-shakers/6464-its-majik" target="_blank">http://www.automationmag.com/industry-news/movers-and-shakers/6464-its-majik</a>
+					<p class="justify">At MAJiK Systems, the web application provides a real-time production monitoring software for manufacturers. This product captures a machines performance and displays the information to seemingly connect the people to the systems for continuous improvement. </p>
+					<p class="justify"><b>What I did there</b></p>
+					<ul class="justify noDecoration">
+						<li class="noDecoration">‣ Created a timeframe class and model to allow dynamic utilization throughout application </li>
+						<li class="noDecoration">‣ Wrote and tested functionality of timeframe class using 100+ unit tests with should.js and chai.js</li>
+						<li class="noDecoration">‣ Integrated timeframe model into application for a uniform and synchronous use</li>
+						<li class="noDecoration">‣ Updated and created client environments and modules for dynamic use with API’s on new MAJiK framework</li>
+					</ul>
+					<p class="justify" style="font-size: 11px">
+						<a href="http://velocity.uwaterloo.ca/companies/majik-systems/"target="_blank">http://velocity.uwaterloo.ca/companies/majik-systems/</a><br>
+						<a href="http://www.automationmag.com/industry-news/movers-and-shakers/6464-its-majik" target="_blank">http://www.automationmag.com/industry-news/movers-and-shakers/6464-its-majik</a>
 					</p>
 				</div>
 			</div>
@@ -25,7 +32,13 @@ title: experience
 				<div>
 					<h4> UI Developer / QA Analyst</h4>
 					<h6>Jan. to Apr. 2016</h6>
-					<p>What I did there</p>
+					<p class="justify">At Veriday, the platform Digital Agent is used to give investment advisors an online presence. The team ensures that the process is supportive to the advisors, allowing them to customize their brand and improve their online presence. </p>
+					<p class="justify"><b>What I did there</b></p>
+					<ul class="justify noDecoration">
+						<li class="noDecoration">‣ Developed and enhanced websites to meet client customizations using HTML, CSS, JavaScript, jQuery and Bootstrap </li>
+						<li class="noDecoration">‣ Ensured websites were optimized and responsive on all devices and platforms</li>
+						<li class="noDecoration">‣ Assisted with improvement of migration scripts by testing and reporting bugs</li>
+					</ul>
 				</div>
 			</div>
 		</div><! --/row -->
