adds pasta images to pages

--- a/pasta.html
+++ b/pasta.html
@@ -5,4 +5,8 @@ date: Dec. 2015
 description: fkldjflkasjfd
 ---
 
-<img src="assets/img/portfolio/folio01.png" class="img-responsive">
+<div class="fade">
+    <div><img src="assets/img/pasta/rendered.png" class="img-responsive img-rounded"></div>
+    <div><img src="assets/img/pasta/angled.png" class="img-responsive img-rounded"></div>
+    <div><img src="assets/img/pasta/topview.png" class="img-responsive img-rounded"></div>
+</div>
