--- a/projects.html
+++ b/projects.html
@@ -13,7 +13,7 @@ title: projects
 				<p>AquaBicylinder</p>
 			</div>
 			<div class="col-lg-6 col-md-6 col-sm-6 gallery">
-				<a href="pasta.html"><img src="assets/img/aquabicylinder/prototype.jpg" class="img-responsive img-rounded projectImage"></a>
+				<a href="pasta.html"><img src="assets/img/pasta/rendered.png" class="img-responsive img-rounded projectImage"></a>
 				<p>SOLIDWORKS</p>
 			</div>
 			<div class="col-lg-6 col-md-6 col-sm-6 gallery">
