content to project pages
small change to footer

--- a/snaptrax.html
+++ b/snaptrax.html
@@ -1,11 +1,30 @@
 ---
 layout: project
 title: Snaptrax
-description: DJflkjslkafjsd
 date: Mar. 11 to 13, 2016
 ---
 
 <div class="fade">
     <div><img src="assets/img/snaptrax/snaptrax1.png" class="img-responsive img-rounded"></div>
     <div><img src="assets/img/snaptrax/snaptrax2.png" class="img-responsive img-rounded"></div>
+</div>
+
+<div class="col-lg-6 col-md-6 col-sm-6 marginTop30">
+    <h4>{{page.title}}</h4>
+    <h6>{{page.date}}</h6>
+    <p>The project was created at NHacks '16 presented by NSpire in London, ON. 
+        You snap a picture, you get a track. SnapTrax is the best way to connect your memories to music. 
+        Imagine your life as a photo album, now imagine your life as a soundtrack. 
+        SnapTrax connects these ideas to enhance the way you remember moments in your life by putting music to your memories. 
+        <br>
+        The website allows one to upload a URL or local image to receive a new song. 
+        To choose the song, an API is used to anazlye the image to retrieve tags which then match the tags of specific songs. 
+        The website will also show a feed of previous uploaded images, with hopes of being specific to each user.
+        <br>
+        <b class="justify">Skills Accquired:</b>
+        <ul class="justify noDecoration">
+            <li class="noDecoration">‣ Used Agile development; utilized Clarifai API to collect tags from uploaded images or URLs, outputting a SoundCloud song </li>
+            <li class="noDecoration">‣ Developed website application using HTML, CSS, Javascript, Bootstrap, and Github</li>
+        </ul>
+    </p>
 </div>
