fixes capitalization of projects

--- a/projects.html
+++ b/projects.html
@@ -14,15 +14,15 @@ title: projects
 			</div>
 			<div class="col-lg-6 col-md-6 col-sm-6 gallery">
 				<a href="pasta.html"><img src="assets/img/pasta/rendered.png" class="img-responsive img-rounded projectImage"></a>
-				<p>SOLIDWORKS</p>
+				<p>SolidWorks</p>
 			</div>
 			<div class="col-lg-6 col-md-6 col-sm-6 gallery">
 				<a href="snaptrax.html"><img src="assets/img/snaptrax/snaptrax1.png" class="img-responsive img-rounded projectImage"></a>
-				<p>SNAPTRAX</p>
+				<p>Snaptrax</p>
 			</div>
 			<div class="col-lg-6 col-md-6 col-sm-6 gallery">
 				<a href="breakInequality.html"><img src="assets/img/breakInequality/home.png" class="img-responsive img-rounded projectImage"></a>
-				<p>BREAK INEQUALITY - Maer Jono</p>
+				<p>Break Inequality - Maer Jono</p>
 			</div>
 		</div><! --/row -->
 	</div><! --/container -->
