--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 ---
 layout: default
-title: about
+title: About
 ---
 	
 	<div class="container">
@@ -8,9 +8,7 @@ title: about
 			<div class="col-lg-8 col-lg-offset-2">
 				<img alt="Caitlyn Kodric" src="assets/img/caitlyn1.jpg" class="aboutImage img-circle">
 				<img alt="Caitlyn Kodric" src="assets/img/nameLarge.png">
-				<p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged.</p>
-				<p>It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum.</p>
-				<p>Contrary to popular belief, Lorem Ipsum is not simply random text. It has roots in a piece of classical Latin literature from 45 BC, making it over 2000 years old.</p>
+				<p>I am currently studying Systems Design Engineering at the Univerity of Waterloo</p>
 			</div>
 
 		</div><! --/row -->
