fixes formatting for snaptrax

--- a/snaptrax.html
+++ b/snaptrax.html
@@ -3,11 +3,12 @@ layout: project
 title: Snaptrax
 date: Mar. 11 to 13, 2016
 ---
-
-<div class="fade">
-    <div><img src="assets/img/snaptrax/snaptrax1.png" class="img-responsive img-rounded"></div>
-    <div><img src="assets/img/snaptrax/snaptrax2.png" class="img-responsive img-rounded"></div>
-</div>
+<div class="col-lg-6 col-md-6 col-sm-6 gallery">
+    <div class="fade">
+        <div><img src="assets/img/snaptrax/snaptrax1.png" class="img-responsive img-rounded"></div>
+        <div><img src="assets/img/snaptrax/snaptrax2.png" class="img-responsive img-rounded"></div>
+    </div>
+<div>
 
 <div class="col-lg-6 col-md-6 col-sm-6 marginTop30">
     <h4>{{page.title}}</h4>
