--- a/snaptrax.html
+++ b/snaptrax.html
@@ -8,7 +8,7 @@ date: Mar. 11 to 13, 2016
         <div><img src="assets/img/snaptrax/snaptrax1.png" class="img-responsive img-rounded"></div>
         <div><img src="assets/img/snaptrax/snaptrax2.png" class="img-responsive img-rounded"></div>
     </div>
-<div>
+</div>
 
 <div class="col-lg-6 col-md-6 col-sm-6 marginTop30">
     <h4>{{page.title}}</h4>
