fixes format all projects

--- a/breakInequality.html
+++ b/breakInequality.html
@@ -3,13 +3,13 @@ layout: project
 title: < Br/eak > Inequality
 date: Nov. 26 to 27, 2016
 ---
-
-<div class="fade">
-    <div><img src="assets/img/breakInequality/names.png" class="img-responsive img-rounded autoMargin"></div>
-    <div><img src="assets/img/breakInequality/profile.png" class="img-responsive img-rounded autoMargin"></div>
-    <div><img src="assets/img/breakInequality/sideNav.png" class="img-responsive img-rounded autoMargin"></div>
+<div class="col-lg-6 col-md-6 col-sm-6 gallery">
+    <div class="fade">
+        <div><img src="assets/img/breakInequality/names.png" class="img-responsive img-rounded autoMargin"></div>
+        <div><img src="assets/img/breakInequality/profile.png" class="img-responsive img-rounded autoMargin"></div>
+        <div><img src="assets/img/breakInequality/sideNav.png" class="img-responsive img-rounded autoMargin"></div>
+    </div>
 </div>
-
 <div class="col-lg-6 col-md-6 col-sm-6 marginTop30">
     <h4>{{page.title}}</h4>
     <h6>{{page.date}}</h6>
