--- a/pasta.html
+++ b/pasta.html
@@ -3,11 +3,12 @@ layout: project
 title: Pasta Maker - Final Project
 date: Dec. 2015
 ---
-
-<div class="fade">
-    <div><img src="assets/img/pasta/rendered.png" class="img-responsive img-rounded"></div>
-    <div><img src="assets/img/pasta/angled.png" class="img-responsive img-rounded"></div>
-    <div><img src="assets/img/pasta/topview.png" class="img-responsive img-rounded"></div>
+<div class="col-lg-6 col-md-6 col-sm-6 gallery">
+    <div class="fade">
+        <div><img src="assets/img/pasta/rendered.png" class="img-responsive img-rounded"></div>
+        <div><img src="assets/img/pasta/angled.png" class="img-responsive img-rounded"></div>
+        <div><img src="assets/img/pasta/topview.png" class="img-responsive img-rounded"></div>
+    </div>
 </div>
 
 <div class="col-lg-6 col-md-6 col-sm-6 marginTop30">
