--- a/aqua.html
+++ b/aqua.html
@@ -3,13 +3,14 @@ layout: project
 title: Aquabicylinder
 date: Sept. to Dec. 2016
 ---
-
-<div class="fade">
-    <div><iframe class="aqua-video" width="100%" height="400px" src="https://www.youtube.com/embed/9eBJzZ_8eOc" frameborder="0" allowfullscreen=""></iframe></div>
-    <div><img src="assets/img/aquabicylinder/cad.jpg" class="img-responsive img-rounded"></div>
-    <div><img src="assets/img/aquabicylinder/prototype.jpg" class="img-responsive img-rounded"></div>
-    <div><img src="assets/img/aquabicylinder/MFP.jpeg" class="img-responsive img-rounded"></div>
-    <div><img src="assets/img/aquabicylinder/HFP.jpeg" class="img-responsive img-rounded"></div>
+<div class="col-lg-6 col-md-6 col-sm-6 gallery">
+    <div class="fade">
+        <div><iframe class="aqua-video" width="100%" height="400px" src="https://www.youtube.com/embed/9eBJzZ_8eOc" frameborder="0" allowfullscreen=""></iframe></div>
+        <div><img src="assets/img/aquabicylinder/cad.jpg" class="img-responsive img-rounded"></div>
+        <div><img src="assets/img/aquabicylinder/prototype.jpg" class="img-responsive img-rounded"></div>
+        <div><img src="assets/img/aquabicylinder/MFP.jpeg" class="img-responsive img-rounded"></div>
+        <div><img src="assets/img/aquabicylinder/HFP.jpeg" class="img-responsive img-rounded"></div>
+    </div>
 </div>
 
 <div class="col-lg-6 col-md-6 col-sm-6 marginTop30">
