fixes paragraph formatting

--- a/pasta.html
+++ b/pasta.html
@@ -14,9 +14,10 @@ date: Dec. 2015
 <div class="col-lg-6 col-md-6 col-sm-6 marginTop30">
     <h4>{{page.title}}</h4>
     <h6>{{page.date}}</h6>
-    <p>The project was created as a final project in the Systems Design Graphics Laboratory (SYDE 101L). 
+    <p class="justify">The project was created as a final project in the Systems Design Graphics Laboratory (SYDE 101L). 
         In this course we learned about SolidWorks and the basics of hand drawn technical drawings. 
         The final project was completed over a few classes, the idea was to create an multiple part assembly of a household tool.
+        <br>
         <br>
         <b class="justify">Skills Accquired:</b>
         <ul class="justify noDecoration">
