--- a/aqua.html
+++ b/aqua.html
@@ -16,7 +16,7 @@ date: Sept. to Dec. 2016
 <div class="col-lg-6 col-md-6 col-sm-6 marginTop30">
     <h4>{{page.title}}</h4>
     <h6>{{page.date}}</h6>
-    <p>The group project was created as a final project in the Systems Design Introduction to Design (SYDE 161). 
+    <p class="justify">The group project was created as a final project in the Systems Design Introduction to Design (SYDE 161). 
         In this course we learned about the techniques and processes to creating an effective design to a given solution.
         The final project was completed over the term, the idea was to create an solution in a third world country that will enhance transportation, health, or resouces.
         <br>
@@ -26,6 +26,8 @@ date: Sept. to Dec. 2016
         <br>
         Throughout this project a low-fidelity, medium-fidelity, and high-fidelity prototypes were created. To justify the groups choice of final design, a final report was created
         which included many justificaion such as; situation of concern (SOC), Quality Function Deployment Chart (QFD), Functions-Means Chart, Morphological chart, and Function Breakdown.
+        <br>
+        <br>
         <b class="justify">Skills Accquired:</b>
         <ul class="justify noDecoration">
             <li class="noDecoration">‣ Created CAD drawings using SolidWorks to create 3-D printed a component</li>
