--- a/snaptrax.html
+++ b/snaptrax.html
@@ -13,7 +13,7 @@ date: Mar. 11 to 13, 2016
 <div class="col-lg-6 col-md-6 col-sm-6 marginTop30">
     <h4>{{page.title}}</h4>
     <h6>{{page.date}}</h6>
-    <p>The project was created at NHacks '16 presented by NSpire in London, ON. 
+    <p class="justify">The project was created at NHacks '16 presented by NSpire in London, ON. 
         You snap a picture, you get a track. SnapTrax is the best way to connect your memories to music. 
         Imagine your life as a photo album, now imagine your life as a soundtrack. 
         SnapTrax connects these ideas to enhance the way you remember moments in your life by putting music to your memories. 
@@ -21,6 +21,7 @@ date: Mar. 11 to 13, 2016
         The website allows one to upload a URL or local image to receive a new song. 
         To choose the song, an API is used to anazlye the image to retrieve tags which then match the tags of specific songs. 
         The website will also show a feed of previous uploaded images, with hopes of being specific to each user.
+        <br>
         <br>
         <b class="justify">Skills Accquired:</b>
         <ul class="justify noDecoration">
