fixes justification paragraphs

--- a/breakInequality.html
+++ b/breakInequality.html
@@ -13,7 +13,7 @@ date: Nov. 26 to 27, 2016
 <div class="col-lg-6 col-md-6 col-sm-6 marginTop30">
     <h4>{{page.title}}</h4>
     <h6>{{page.date}}</h6>
-    <p>The project was created at BreakInequality Hackathon presented by Devs Without Boarders in Kitchener, ON. 
+    <p class="justify">The project was created at BreakInequality Hackathon presented by Devs Without Boarders in Kitchener, ON. 
        In Bangledesh there are many geographic areas with unsustainable health care. 
        The given case study was to build a program or app to connect the health social workers and their pregnant patients in Bangledesh.
        Since women can have many complications, "The focus will be present data in a manner that is understandable for community members with low literacy. 
