--- a/projects.html
+++ b/projects.html
@@ -7,20 +7,23 @@ title: Projects
 	<div class="container">
 		<div class="row centered mt mb">
 			<h1>My Projects</h1>
-			
-			<div class="col-lg-6 col-md-6 col-sm-6 gallery">
+			<div class="col-lg-4 col-md-4 col-sm-4 gallery">
+				<a href="slotMachine.html"><img src="assets/img/slotMachine/top.jpg" class="img-responsive img-rounded projectImage"></a>
+				<p>Slot Machine</p>
+			</div>
+			<div class="col-lg-4 col-md-4 col-sm-4 gallery">
 				<a href="aqua.html"><img src="assets/img/aquabicylinder/prototype.jpg" class="img-responsive img-rounded projectImage"></a>
 				<p>AquaBicylinder</p>
 			</div>
-			<div class="col-lg-6 col-md-6 col-sm-6 gallery">
+			<div class="col-lg-4 col-md-4 col-sm-4 gallery">
 				<a href="pasta.html"><img src="assets/img/pasta/rendered.png" class="img-responsive img-rounded projectImage"></a>
 				<p>SolidWorks</p>
 			</div>
-			<div class="col-lg-6 col-md-6 col-sm-6 gallery">
+			<div class="col-lg-4 col-md-4 col-sm-4 gallery">
 				<a href="snaptrax.html"><img src="assets/img/snaptrax/snaptrax1.png" class="img-responsive img-rounded projectImage"></a>
 				<p>Snaptrax</p>
 			</div>
-			<div class="col-lg-6 col-md-6 col-sm-6 gallery">
+			<div class="col-lg-4 col-md-4 col-sm-4 gallery">
 				<a href="breakInequality.html"><img src="assets/img/breakInequality/home.png" class="img-responsive img-rounded projectImage"></a>
 				<p>Break Inequality - Maer Jono</p>
 			</div>
