fixes divs in index

--- a/index.html
+++ b/index.html
@@ -8,8 +8,13 @@ title: About
 			<div class="col-lg-8 col-lg-offset-2">
 				<img alt="Caitlyn Kodric" src="assets/img/caitlyn1.jpg" class="aboutImage img-circle">
 				<img alt="Caitlyn Kodric" src="assets/img/nameLarge.png">
-				<p>I am currently studying Systems Design Engineering at the Univerity of Waterloo</p>
+				<br>
+				<p>I am currently studying Systems Design Engineering at the Univerity of Waterloo. </p>
+			<div>
+				Skills!!! 
 			</div>
+			</div>
+
 
 		</div><! --/row -->
 	</div><! --/container -->
