--- a/slotMachine.html
+++ b/slotMachine.html
@@ -24,15 +24,11 @@ date: July 2016
     <h4>{{page.title}}</h4>
     <h6>{{page.date}}</h6>
     <p class="justify">The group project was created as a final project in the Systems Design Digital Systems Laboratory (SYDE 192L). 
-        In this course we learned about the techniques and processes to creating an effective design to a given solution.
-        The final project was completed over the term, the idea was to create an solution in a third world country that will enhance transportation, health, or resouces.
+        In this course we used an Arduino Uno to create circuits and solve problems.
         <br>
-        A solution must be created to reduce the negative physical health effects caused by transporting water, as well as the time spent in transport. 
-        This solution should be a design that will reduce the time spent fetching water each day by women and children by 75% to allow time for other more productive tasks, 
-        and must not require the user to carry heavy objects above the ground.
-        <br>
-        Throughout this project a low-fidelity, medium-fidelity, and high-fidelity prototypes were created. To justify the groups choice of final design, a final report was created
-        which included many justificaion such as; situation of concern (SOC), Quality Function Deployment Chart (QFD), Functions-Means Chart, Morphological chart, and Function Breakdown.
+        The Slot Machine works with a user input which 'spins' values on an LCD screen. The play enters quarters to the amount they want to bet into the slot to complete the circuit.
+        When the play button is hit, the random number generator spins each column for a certain number of seconds. The output of the program uses a timer for the total time of the game,
+        if no button is pressed the game will reset. When the slot machine shows three identical numbers, the slot machine motor will tilt the collection of coins to the winning player!
         <br>
         <br>
         <b class="justify">Skills Accquired:</b>
