adds next and back to projects

--- a/projects.html
+++ b/projects.html
@@ -12,15 +12,15 @@ title: Projects
 				<p>Slot Machine</p>
 			</div>
 			<div class="col-lg-4 col-md-4 col-sm-4 gallery">
-				<a href="aqua.html"><img src="assets/img/aquabicylinder/prototype.jpg" class="img-responsive img-rounded projectImage"></a>
+				<a href="Aquabicylinder.html"><img src="assets/img/aquabicylinder/prototype.jpg" class="img-responsive img-rounded projectImage"></a>
 				<p>AquaBicylinder</p>
 			</div>
 			<div class="col-lg-4 col-md-4 col-sm-4 gallery">
-				<a href="pasta.html"><img src="assets/img/pasta/rendered.png" class="img-responsive img-rounded projectImage"></a>
+				<a href="PastaMaker.html"><img src="assets/img/pasta/rendered.png" class="img-responsive img-rounded projectImage"></a>
 				<p>SolidWorks</p>
 			</div>
 			<div class="col-lg-4 col-md-4 col-sm-4 gallery">
-				<a href="snaptrax.html"><img src="assets/img/snaptrax/snaptrax1.png" class="img-responsive img-rounded projectImage"></a>
+				<a href="Snaptrax.html"><img src="assets/img/snaptrax/snaptrax1.png" class="img-responsive img-rounded projectImage"></a>
 				<p>Snaptrax</p>
 			</div>
 			<div class="col-lg-4 col-md-4 col-sm-4 gallery">
