--- a/snaptrax.html
+++ b/snaptrax.html
@@ -2,6 +2,8 @@
 layout: project
 title: Snaptrax
 date: Mar. 11 to 13, 2016
+next: breakInequality
+last: PastaMaker
 ---
 <div class="col-lg-6 col-md-6 col-sm-6 gallery">
     <div class="fade">
