--- a/slotMachine.html
+++ b/slotMachine.html
@@ -2,6 +2,8 @@
 layout: project
 title: SlotMachine - Final Project
 date: July 2016
+last: 
+next: Aquabicylinder
 ---
 <div class="col-lg-6 col-md-6 col-sm-6 gallery">
     <div class="fade">
