--- a/experience.html
+++ b/experience.html
@@ -14,7 +14,7 @@ title: Experience
 					<h4>Front-End Developer</h4>
 					<h6>Sept. to Dec. 2016</h6>
 					<p class="justify">At MAJiK Systems, the web application provides a real-time production monitoring software for manufacturers. This product captures a machines performance and displays the information to seemingly connect the people to the systems for continuous improvement. </p>
-					<p class="justify"><b>What I did there</b></p>
+					<p class="justify"><b>Skills Acquired</b></p>
 					<ul class="justify noDecoration">
 						<li class="noDecoration">‣ Created a timeframe class and model to allow dynamic utilization throughout application </li>
 						<li class="noDecoration">‣ Wrote and tested functionality of timeframe class using 100+ unit tests with should.js and chai.js</li>
@@ -33,7 +33,7 @@ title: Experience
 					<h4> UI Developer / QA Analyst</h4>
 					<h6>Jan. to Apr. 2016</h6>
 					<p class="justify">At Veriday, the platform Digital Agent is used to give investment advisors an online presence. The team ensures that the process is supportive to the advisors, allowing them to customize their brand and improve their online presence. </p>
-					<p class="justify"><b>What I did there</b></p>
+					<p class="justify"><b>Skills Acquired</b></p>
 					<ul class="justify noDecoration">
 						<li class="noDecoration">‣ Developed and enhanced websites to meet client customizations using HTML, CSS, JavaScript, jQuery and Bootstrap </li>
 						<li class="noDecoration">‣ Ensured websites were optimized and responsive on all devices and platforms</li>
