--- a/experience.html
+++ b/experience.html
@@ -13,12 +13,17 @@ title: Experience
 				<div>
 					<h4>Front-End Developer</h4>
 					<h6>Sept. to Dec. 2016</h6>
-					<p class="justify">At MAJiK Systems, the web application provides a real-time production monitoring software for manufacturers. This product captures a machines performance and displays the information to seemingly connect the people to the systems for continuous improvement. </p>
+					<p class="justify">At MAJiK Systems, the web application provides a real-time production monitoring software for manufacturers. This product captures a machines 
+						performance and displays the information to seemingly connect the people to the systems for continuous improvement. 
+						<br><br>
+						Working on the client side of the MAJiK Systems environment I was able to learn JavaScript and advance my knowledge in creating and using API's. 
+						My daily responsibilities were to update and enhance various clients customized environments based on their requests. At MAJiK I created a timeframe class and model
+						to allow real-time moments to be used dynamically thoughout the application.
+					</p>
 					<p class="justify"><b>Skills Acquired</b></p>
 					<ul class="justify noDecoration">
-						<li class="noDecoration">‣ Created a timeframe class and model to allow dynamic utilization throughout application </li>
+						<li class="noDecoration">‣ Created and integrated timeframe model into application for a uniform and synchronous use</li>
 						<li class="noDecoration">‣ Wrote and tested functionality of timeframe class using 100+ unit tests with should.js and chai.js</li>
-						<li class="noDecoration">‣ Integrated timeframe model into application for a uniform and synchronous use</li>
 						<li class="noDecoration">‣ Updated and created client environments and modules for dynamic use with API’s on new MAJiK framework</li>
 					</ul>
 					<p class="justify" style="font-size: 11px">
@@ -32,10 +37,14 @@ title: Experience
 				<div>
 					<h4> UI Developer / QA Analyst</h4>
 					<h6>Jan. to Apr. 2016</h6>
-					<p class="justify">At Veriday, the platform Digital Agent is used to give investment advisors an online presence. The team ensures that the process is supportive to the advisors, allowing them to customize their brand and improve their online presence. </p>
+					<p class="justify">At Veriday, the platform Digital Agent is used to give investment advisors an online presence. The team ensures that the process is supportive to the advisors, allowing them to customize their brand and improve their online presence. 
+						<br><br>
+						Working on the service team at Veriday I was able to teach myself web development skills such as HTML5, CSS3, JavaScript and jQuery.
+						With this knowledge I was able to develop websites for financial advisors based on their customization requests. I was able to use JavaScript
+						and Bootstrap to enhance websites for a unique and responsive experience.
+					</p>
 					<p class="justify"><b>Skills Acquired</b></p>
 					<ul class="justify noDecoration">
-						<li class="noDecoration">‣ Developed and enhanced websites to meet client customizations using HTML, CSS, JavaScript, jQuery and Bootstrap </li>
 						<li class="noDecoration">‣ Ensured websites were optimized and responsive on all devices and platforms</li>
 						<li class="noDecoration">‣ Assisted with improvement of migration scripts by testing and reporting bugs</li>
 					</ul>
