--- a/slotMachine.html
+++ b/slotMachine.html
@@ -35,7 +35,7 @@ next: Aquabicylinder
         <br>
         <b class="justify">Skills Accquired:</b>
         <ul class="justify noDecoration">
-            <li class="noDecoration">‣ Accquired knowledge in Arduino Uno</li>
+            <li class="noDecoration">‣ Acquired knowledge in Arduino Uno</li>
         </ul>
     </p>
 </div>
