--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@ title: About
 				<img alt="Caitlyn Kodric" src="assets/img/nameLarge.png">
 				<br>
 				<p class="">I am currently studying Systems Design Engineering at the Univerity of Waterloo. 
-					Being in Systems Design I possess a strong passion for technology and design.
+					From being in Systems Design I possess a strong passion for technology and design.
 					My leadership background over the past few years has taught me strong teamwork skills that I have used to help others. 
 					I am able to quickly adapt to new environments and transfer skills from previous experiences. 
 					<br>
