fixes links in exp, proj, css

--- a/experience.html
+++ b/experience.html
@@ -27,8 +27,8 @@ title: Experience
 						<li class="noDecoration">‣ Updated and created client environments and modules for dynamic use with API’s on new MAJiK framework</li>
 					</ul>
 					<p class="justify" style="font-size: 11px">
-						<a href="http://velocity.uwaterloo.ca/companies/majik-systems/"target="_blank">http://velocity.uwaterloo.ca/companies/majik-systems/</a><br>
-						<a href="http://www.automationmag.com/industry-news/movers-and-shakers/6464-its-majik" target="_blank">http://www.automationmag.com/industry-news/movers-and-shakers/6464-its-majik</a>
+						<a href="http://velocity.uwaterloo.ca/companies/majik-systems/"target="_blank" class="noTextDeco">http://velocity.uwaterloo.ca/companies/majik-systems/</a><br>
+						<a href="http://www.automationmag.com/industry-news/movers-and-shakers/6464-its-majik" target="_blank" class="noTextDeco">http://www.automationmag.com/industry-news/movers-and-shakers/6464-its-majik</a>
 					</p>
 				</div>
 			</div>
