--- a/experience.html
+++ b/experience.html
@@ -9,7 +9,7 @@ title: Experience
 			<h1>My Experience</h1>
 			
 			<div class="col-lg-6 col-md-6 col-sm-6 gallery">
-				<a href="http://www.majik.io" target="_blank"><img src="assets/img/experience/MajikSystemsLogo.png" class="img-responsive img-rounded"></a>
+				<a href="http://www.majik.io" target="_blank"><img src="assets/img/experience/MajikSystemsLogo.png" class="img-responsive img-rounded marginAuto"></a>
 				<div>
 					<h4>Front-End Developer</h4>
 					<h6>Sept. to Dec. 2016</h6>
@@ -33,7 +33,7 @@ title: Experience
 				</div>
 			</div>
 			<div class="col-lg-6 col-md-6 col-sm-6 gallery">
-				<a href="http://www.veriday.com/" target="_blank"><img src="assets/img/experience/VeridayLogo.png" class="img-responsive img-rounded"></a>
+				<a href="http://www.veriday.com/" target="_blank"><img src="assets/img/experience/VeridayLogo.png" class="img-responsive img-rounded marginAuto"></a>
 				<div>
 					<h4> UI Developer / QA Analyst</h4>
 					<h6>Jan. to Apr. 2016</h6>
