--- a/PastaMaker.html
+++ b/PastaMaker.html
@@ -21,7 +21,7 @@ last: Aquabicylinder
         The final project was completed over a few classes, the idea was to create an multiple part assembly of a household tool.
         <br>
         <br>
-        <b class="justify">Skills Accquired:</b>
+        <b class="justify">Skills Acquired:</b>
         <ul class="justify noDecoration">
             <li class="noDecoration">‣ Created CAD drawings using SolidWorks to create 3-D printed a component</li>
             <li class="noDecoration">‣ Acquired report writing skills using multiple charts and statements to justify effective design choices</li>
