--- a/Snaptrax.html
+++ b/Snaptrax.html
@@ -27,7 +27,7 @@ last: PastaMaker
         The website will also show a feed of previous uploaded images, with hopes of being specific to each user.		
         <br>
         <br>
-        The visual aspect of the webite is available <a href="/assets/SnapTrax/index.html" class="noTextDeco">here.</a>
+        The visual aspect of the website is available <a href="/assets/SnapTrax/index.html" class="noTextDeco">here.</a>
         <br>
         <br>
         <b class="justify">Skills Accquired:</b>		
