--- a/breakInequality.html
+++ b/breakInequality.html
@@ -15,8 +15,8 @@ last: Snaptrax
     <h4>{{page.title}}</h4>
     <h6>{{page.date}}</h6>
     <p class="justify">The project was created at BreakInequality Hackathon presented by Devs Without Boarders in Kitchener, ON. 
-       In Bangledesh there are many geographic areas with unsustainable health care. 
-       The given case study was to build a program or app to connect the health social workers and their pregnant patients in Bangledesh.
+       In Bangladesh there are many geographic areas with unsustainable health care. 
+       The given case study was to build a program or app to connect the health social workers and their pregnant patients in Bangladesh.
        Since women can have many complications, "The focus will be present data in a manner that is understandable for community members with low literacy. 
        Additionally, it can have built-in accountability measures to ensure that data is used for developing action plans and to monitor progress of these plans.".
     </p>
