--- a/experience.html
+++ b/experience.html
@@ -18,7 +18,7 @@ title: Experience
 						<br><br>
 						Working on the client side of the MAJiK Systems environment I was able to learn JavaScript and advance my knowledge in creating and using API's. 
 						My daily responsibilities were to update and enhance various clients customized environments based on their requests. At MAJiK I created a timeframe class and model
-						to allow real-time moments to be used dynamically thoughout the application.
+						to allow real-time moments to be used dynamically throughout the application.
 					</p>
 					<p class="justify"><b>Skills Acquired</b></p>
 					<ul class="justify noDecoration">
