fixes first and last projects`

--- a/breakInequality.html
+++ b/breakInequality.html
@@ -3,6 +3,7 @@ layout: project
 title: < Br/eak > Inequality
 date: Nov. 26 to 27, 2016
 last: Snaptrax
+next: projects
 ---
 <div class="col-lg-6 col-md-6 col-sm-6 gallery">
     <div class="fade">
