--- a/slotMachine.html
+++ b/slotMachine.html
@@ -2,7 +2,7 @@
 layout: project
 title: SlotMachine - Final Project
 date: July 2016
-last: 
+last: projects
 next: Aquabicylinder
 ---
 <div class="col-lg-6 col-md-6 col-sm-6 gallery">
