--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
     <link href="https://fonts.googleapis.com/css?family=Playfair+Display:400,400i,700,700i%7cWork+Sans:400,500,700" rel="stylesheet" type="text/css">
     
     <link rel="stylesheet" href="assets/css/combined.css">
-
+    <link rel="stylesheet" href="assets/css/custom.css">
     <!-- END: Styles -->
 
 
