Added custom js file

--- a/index.html
+++ b/index.html
@@ -801,7 +801,7 @@
     <!-- START: Scripts -->
 
     <script src="assets/js/combined.js"></script>
-    
+    <script src="assets/js/custom.js"></script>
     <!-- END: Scripts -->
 
 
