Added resume to navbar

--- a/index.html
+++ b/index.html
@@ -67,6 +67,9 @@
                             <a href="portfolio.html">Portfolio</a>
                         </li>
                         <li>
+                            <a href="#">Resume</a>
+                        </li>
+                        <li>
                             <a href="blog.html">Blog</a>
                         </li>
                     </ul>
