--- a/portfolio.html
+++ b/portfolio.html
@@ -68,6 +68,9 @@
                             <a href="portfolio.html">Portfolio</a>
                         </li>
                         <li>
+                            <a href="#">Resume</a>
+                        </li>
+                        <li>
                             <a href="blog.html">Blog</a>
                         </li>
                     </ul>
