--- a/blog-single.html
+++ b/blog-single.html
@@ -32,7 +32,7 @@
     <link href="https://fonts.googleapis.com/css?family=Playfair+Display:400,400i,700,700i%7cWork+Sans:400,500,700" rel="stylesheet" type="text/css">
     
     <link rel="stylesheet" href="assets/css/combined.css">
-
+    <link rel="stylesheet" href="assets/css/font-awesome.min.css">
     <!-- END: Styles -->
 
 
@@ -133,10 +133,10 @@
                 <div class="container">
                     <div class="nk-nav-social">
                         <ul>
-                            <li><a href="https://twitter.com/nkdevv"><i class="fa fa-twitter"></i></a></li>
-                            <li><a href="https://www.facebook.com/unvabdesign/"><i class="fa fa-facebook"></i></a></li>
-                            <li><a href="https://dribbble.com/_nK"><i class="fa fa-dribbble"></i></a></li>
-                            <li><a href="https://www.instagram.com/unvab/"><i class="fa fa-instagram"></i></a></li>
+                            <li><a href="https://www.facebook.com/caitlynkodric"><i class="fa fa-facebook"></i></a></li>
+                            <li><a href="https://github.com/caitlynkodric"><i class="fa fa-github"></i></a></li>
+                            <li><a href="https://linkedin.com/caitlynkodric"><i class="fa fa-linkedin-square"></i></a></li>
+                            <li><a href="https://www.instagram.com/caitlynkodric"><i class="fa fa-instagram"></i></a></li>
                         </ul>
                     </div>
                 </div>
@@ -343,10 +343,10 @@
                 <div class="container text-xs-center">
                     <div class="nk-footer-social">
                         <ul>
-                            <li><a href="https://twitter.com/nkdevv"><i class="fa fa-twitter"></i></a></li>
-                            <li><a href="https://www.facebook.com/unvabdesign/"><i class="fa fa-facebook"></i></a></li>
-                            <li><a href="https://dribbble.com/_nK"><i class="fa fa-dribbble"></i></a></li>
-                            <li><a href="https://www.instagram.com/unvab/"><i class="fa fa-instagram"></i></a></li>
+                            <li><a href="https://www.facebook.com/caitlynkodric"><i class="fa fa-facebook"></i></a></li>
+                            <li><a href="https://github.com/caitlynkodric"><i class="fa fa-github"></i></a></li>
+                            <li><a href="https://linkedin.com/caitlynkodric"><i class="fa fa-linkedin-square"></i></a></li>
+                            <li><a href="https://www.instagram.com/caitlynkodric"><i class="fa fa-instagram"></i></a></li>
                         </ul>
                     </div>
 
