--- a/index.html
+++ b/index.html
@@ -33,6 +33,7 @@
     
     <link rel="stylesheet" href="assets/css/combined.css">
     <link rel="stylesheet" href="assets/css/custom.css">
+    <link rel="stylesheet" href="assets/css/font-awesome.min.css">
     <!-- END: Styles -->
 
 
@@ -136,10 +137,10 @@
                 <div class="container">
                     <div class="nk-nav-social">
                         <ul>
-                            <li><a href="https://twitter.com/nkdevv"><i class="fa fa-twitter"></i></a></li>
-                            <li><a href="https://www.facebook.com/unvabdesign/"><i class="fa fa-facebook"></i></a></li>
-                            <li><a href="https://dribbble.com/_nK"><i class="fa fa-dribbble"></i></a></li>
-                            <li><a href="https://www.instagram.com/unvab/"><i class="fa fa-instagram"></i></a></li>
+                            <li><a href="https://www.facebook.com/caitlynkodric"><i class="fa fa-facebook"></i></a></li>
+                            <li><a href="https://github.com/caitlynkodric"><i class="fa fa-github"></i></a></li>
+                            <li><a href="https://linkedin.com/caitlynkodric"><i class="fa fa-linkedin-square"></i></a></li>
+                            <li><a href="https://www.instagram.com/caitlynkodric"><i class="fa fa-instagram"></i></a></li>
                         </ul>
                     </div>
                 </div>
@@ -780,10 +781,10 @@
                 <div class="container text-xs-center">
                     <div class="nk-footer-social">
                         <ul>
-                            <li><a href="https://twitter.com/nkdevv"><i class="fa fa-twitter"></i></a></li>
-                            <li><a href="https://www.facebook.com/unvabdesign/"><i class="fa fa-facebook"></i></a></li>
-                            <li><a href="https://dribbble.com/_nK"><i class="fa fa-dribbble"></i></a></li>
-                            <li><a href="https://www.instagram.com/unvab/"><i class="fa fa-instagram"></i></a></li>
+                            <li><a href="https://www.facebook.com/caitlynkodric"><i class="fa fa-facebook"></i></a></li>
+                            <li><a href="https://github.com/caitlynkodric"><i class="fa fa-github"></i></a></li>
+                            <li><a href="https://linkedin.com/caitlynkodric"><i class="fa fa-linkedin-square"></i></a></li>
+                            <li><a href="https://www.instagram.com/caitlynkodric"><i class="fa fa-instagram"></i></a></li>
                         </ul>
                     </div>
 
