Adds custom css and js files

--- a/blog-single.html
+++ b/blog-single.html
@@ -32,6 +32,7 @@
     <link href="https://fonts.googleapis.com/css?family=Playfair+Display:400,400i,700,700i%7cWork+Sans:400,500,700" rel="stylesheet" type="text/css">
     
     <link rel="stylesheet" href="assets/css/combined.css">
+    <link rel="stylesheet" href="assets/css/custom.css">
     <link rel="stylesheet" href="assets/css/font-awesome.min.css">
     <!-- END: Styles -->
 
@@ -367,7 +368,7 @@
     <!-- START: Scripts -->
 
     <script src="assets/js/combined.js"></script>
-
+    <script src="assets/js/custom.js"></script>    
     <!-- END: Scripts -->
 
 
