--- a/portfolio-single.html
+++ b/portfolio-single.html
@@ -32,6 +32,7 @@
     <link href="https://fonts.googleapis.com/css?family=Playfair+Display:400,400i,700,700i%7cWork+Sans:400,500,700" rel="stylesheet" type="text/css">
     
     <link rel="stylesheet" href="assets/css/combined.css">
+    <link rel="stylesheet" href="assets/css/custom.css">
     <link rel="stylesheet" href="assets/css/font-awesome.min.css">
     <!-- END: Styles -->
 
@@ -133,13 +134,12 @@
             </div>
             <div class="nk-nav-row">
                 <div class="container">
-                    <div class="nk-nav-social">
-                        <ul>
+                    <ul>
                         <li><a href="https://www.facebook.com/caitlynkodric"><i class="fa fa-facebook"></i></a></li>
                         <li><a href="https://github.com/caitlynkodric"><i class="fa fa-github"></i></a></li>
                         <li><a href="https://linkedin.com/caitlynkodric"><i class="fa fa-linkedin-square"></i></a></li>
                         <li><a href="https://www.instagram.com/caitlynkodric"><i class="fa fa-instagram"></i></a></li>
-                        </ul>
+                    </ul>
                     </div>
                 </div>
             </div>
@@ -251,7 +251,7 @@
     <!-- START: Scripts -->
 
     <script src="assets/js/combined.js"></script>
-    
+    <script src="assets/js/custom.js"></script>    
     <!-- END: Scripts -->
 
 
