Comment out Blog

--- a/New/index.html
+++ b/New/index.html
@@ -70,9 +70,9 @@
                         <li>
                             <a href="#">Resume</a>
                         </li>
-                        <li>
+                        <!-- <li>
                             <a href="blog.html">Blog</a>
-                        </li>
+                        </li> -->
                     </ul>
 
                     <ul class="nk-nav nk-nav-right nk-nav-icons">
@@ -220,7 +220,7 @@
         <!-- END: About Our Agency -->
 
         <!-- START: Features -->
-        <div class="nk-box bg-dark-1 text-white">
+        <!-- <div class="nk-box bg-dark-1 text-white">
             <div class="bg-image bg-image-parallax" style="background-image: url('assets/images/bg-pattern.jpg');"></div>
             <div class="nk-gap-5 mnt-6"></div>
             <div class="container">
@@ -272,7 +272,7 @@
                 </div>
             </div>
             <div class="nk-gap-5 mnt-6"></div>
-        </div>
+        </div> -->
         <!-- END: Features -->
 
         <!-- START: Portfolio -->
@@ -446,13 +446,13 @@
         <!-- END: Portfolio -->
 
         <!-- START: Reviews -->
-        <div class="nk-box bg-dark-1">
+        <!-- <div class="nk-box bg-dark-1">
             <div class="bg-image bg-image-parallax" style="background-image: url('assets/images/bg-pattern.jpg');"></div>
             <div class="nk-gap-5 mnt-6"></div>
             <div class="nk-gap-3"></div>
-            <div class="container-fluid">
+            <div class="container-fluid"> -->
                 <!-- START: Carousel -->
-                <div class="nk-carousel nk-carousel-all-visible text-white" data-autoplay="18000" data-dots="true">
+                <!-- <div class="nk-carousel nk-carousel-all-visible text-white" data-autoplay="18000" data-dots="true">
                     <div class="nk-carousel-inner">
                         <div>
                             <div>
@@ -482,15 +482,15 @@
                             </div>
                         </div>
                     </div>
-                </div>
+                </div> -->
                 <!-- END: Carousel -->
-            </div>
+            <!-- </div>
             <div class="nk-gap-4 mt-3"></div>
-        </div>
+        </div> -->
         <!-- END: Reviews -->
 
         <!-- START: Partners -->
-        <div class="bg-white">
+        <!-- <div class="bg-white">
             <div class="container">
                 <div class="nk-carousel-2 nk-carousel-x4 nk-carousel-no-margin nk-carousel-all-visible">
                     <div class="nk-carousel-inner">
@@ -553,11 +553,11 @@
                     </div>
                 </div>
             </div>
-        </div>
+        </div> -->
         <!-- END: Partners -->
 
         <!-- START: Blog -->
-        <div class="nk-box bg-gray-1" id="blog">
+        <!-- <div class="nk-box bg-gray-1" id="blog">
             <div class="nk-gap-4 mt-5"></div>
 
             <h2 class="text-xs-center display-4">Latest Blog</h2>
@@ -573,9 +573,9 @@
             </div>
 
             <div class="nk-gap-2 mt-12"></div>
-            <div class="container">
+            <div class="container"> -->
                 <!-- START: Carousel -->
-                <div class="nk-carousel-2 nk-carousel-x2 nk-carousel-no-margin nk-carousel-all-visible nk-blog-isotope" data-dots="true">
+                <!-- <div class="nk-carousel-2 nk-carousel-x2 nk-carousel-no-margin nk-carousel-all-visible nk-blog-isotope" data-dots="true">
                     <div class="nk-carousel-inner">
 
 
@@ -709,11 +709,11 @@
                         </div>
 
                     </div>
-                </div>
+                </div> -->
                 <!-- END: Carousel -->
-            </div>
+            <!-- </div>
             <div class="nk-gap-5 mt-20"></div>
-        </div>
+        </div> -->
         <!-- END: Blog -->
 
         <!-- START: Contact Info -->
