--- a/New/portfolio-single.html
+++ b/New/portfolio-single.html
@@ -70,8 +70,11 @@
                             <a href="portfolio.html">Portfolio</a>
                         </li>
                         <li>
-                            <a href="blog.html">Blog</a>
+                            <a href="#">Resume</a>
                         </li>
+                        <!-- <li>
+                            <a href="blog.html">Blog</a>
+                        </li> -->
                     </ul>
 
                     <ul class="nk-nav nk-nav-right nk-nav-icons">
