Change homepage   * comment out contact   * add short bio

--- a/New/index.html
+++ b/New/index.html
@@ -204,15 +204,20 @@
                     <div class="col-lg-8 offset-lg-2 text-xs-center">
                         <div class="nk-gap-4 mt-9"></div>
 
-                        <h2 class="display-4">About Our Agency</h2>
+                        <h2 class="display-4">About Me</h2>
                         <div class="nk-gap mnt-5"></div>
 
-                        <p>We are a new design studio based in USA. We have over 20 years of combined experience, and know a thing or two about designing websites and mobile apps. Clever use of technology and lean processes enable us to work faster and smarter.
+                        <p>
+                            Hi, I'm Caitlyn! I'm currently a student at the University of Waterloo studying Systems Design Engineering. 
+                            I have a passion for painting and would love the opportunity to work in design. 
+                            <br />
+                            Say hello! Send me an message at <a href="mailto:c.kodric@gmail.com">ckodric@gmail.com</a> or check me out on <a href="https://linkedin.com/caitlynkodric">LinkedIn</a>
+                
                         </p>
 
-                        <img src="assets/images/about-me-signature.png" alt="" class="nk-img-fit">
+                        <!-- <img src="assets/images/about-me-signature.png" alt="" class="nk-img-fit">-->
 
-                        <div class="nk-gap-4 mt-25"></div>
+                        <!-- <div class="nk-gap-4 mt-25"></div> -->
                     </div>
                 </div>
             </div>
@@ -717,12 +722,12 @@
         <!-- END: Blog -->
 
         <!-- START: Contact Info -->
-        <div class="container" id="contact">
+        <!-- <div class="container" id="contact">
             <div class="nk-gap-5"></div>
             <div class="row vertical-gap">
-                <div class="col-lg-5">
+                <div class="col-lg-5"> -->
                     <!-- START: Info -->
-                    <h2 class="display-4">Contact Info:</h2>
+                    <!-- <h2 class="display-4">Contact Info:</h2>
                     <div class="nk-gap mnt-3"></div>
 
                     <p>Praesent interdum congue mauris, et fringilla lacus pel vitae. Quisque nisl mauris, aliquam eu ultrices vel, conse vitae sapien at imperdiet risus. Quisque cursus risus id. fermentum, in auctor quam consectetur.</p>
@@ -736,12 +741,12 @@
                             <strong>Email:</strong> info@Example.com</li>
                         <li>
                             <strong>Fax:</strong> +44 987 065 909</li>
-                    </ul>
+                    </ul> -->
                     <!-- END: Info -->
-                </div>
-                <div class="col-lg-7">
+                <!-- </div> -->
+                <!-- <div class="col-lg-7"> -->
                     <!-- START: Form -->
-                    <form action="#" class="nk-form nk-form-ajax">
+                    <!-- <form action="#" class="nk-form nk-form-ajax">
                         <div class="row vertical-gap">
                             <div class="col-md-6">
                                 <input type="text" class="form-control required" name="name" placeholder="Your Name">
@@ -760,12 +765,12 @@
                         <div class="nk-form-response-success"></div>
                         <div class="nk-form-response-error"></div>
                         <button class="nk-btn">Send Message</button>
-                    </form>
+                    </form> -->
                     <!-- END: Form -->
-                </div>
+                <!-- </div>
             </div>
             <div class="nk-gap-5"></div>
-        </div>
+        </div> -->
         <!-- END: Contact Info -->
 
 
@@ -789,7 +794,7 @@
                     </div>
 
                     <div class="nk-footer-text">
-                        <p>Footer</p>
+                        <p>Caitlyn Kodric</p>
                     </div>
                 </div>
             </div>
