Change portfolio filters

--- a/New/portfolio.html
+++ b/New/portfolio.html
@@ -165,10 +165,10 @@
             </div>
             <ul class="nk-isotope-filter">
                 <li class="active" data-filter="*">All</li>
-                <li data-filter="Branding">Branding</li>
-                <li data-filter="Print">Print</li>
-                <li data-filter="Photography">Photography</li>
-                <li data-filter="Design">Design</li>
+                <!-- <li data-filter="Design">Design</li> -->
+                <li data-filter="ArtWork">Art Work</li>
+                <li data-filter="CAD">CAD</li>
+                <li data-filter="Circuits">Circuits</li>
                 <li data-filter="Mockup">Mockup</li>
             </ul>
             <!-- END: Filter -->
