--- a/New/index.html
+++ b/New/index.html
@@ -61,9 +61,9 @@
                         <li>
                             <a href="index.html#about">About</a>
                         </li>
-                        <li>
+                        <!-- <li>
                             <a href="index.html#contact">Contact</a>
-                        </li>
+                        </li> -->
                         <li>
                             <a href="portfolio.html">Portfolio</a>
                         </li>
@@ -284,13 +284,14 @@
         <div class="nk-box bg-white" id="projects">
             <div class="nk-gap-4 mt-5"></div>
 
-            <h2 class="text-xs-center display-4">Best Projects</h2>
+            <h2 class="text-xs-center display-4">Projects</h2>
 
             <div class="nk-gap mnt-6"></div>
             <div class="container">
                 <div class="row">
                     <div class="col-lg-8 offset-lg-2">
-                        <div class="text-xs-center">Donec orci sem, pretium ac dolor et, faucibus faucibus mauris. Etiam,pellentesque faucibus. Vestibulum gravida volutpat ipsum non ultrices.
+                        <div class="text-xs-center">
+                            <!-- Check out some of my projects? -->
                         </div>
                     </div>
                 </div>
