--- a/New/portfolio-single.html
+++ b/New/portfolio-single.html
@@ -70,7 +70,7 @@
                             <a href="portfolio.html">Portfolio</a>
                         </li>
                         <li>
-                            <a href="#">Resume</a>
+                            <a href="assets/pdf/Resume Caitlyn Kodric.pdf" target="_blank">Resume</a>
                         </li>
                         <!-- <li>
                             <a href="blog.html">Blog</a>
