--- a/New/index.html
+++ b/New/index.html
@@ -68,7 +68,7 @@
                             <a href="portfolio.html">Portfolio</a>
                         </li>
                         <li>
-                            <a href="#">Resume</a>
+                            <a href="assets/pdf/Resume Caitlyn Kodric.pdf" target="_blank">Resume</a>
                         </li>
                         <!-- <li>
                             <a href="blog.html">Blog</a>
