--- a/New/portfolio.html
+++ b/New/portfolio.html
@@ -178,13 +178,13 @@
 
                 <div class="nk-isotope-item" data-filter="Mockup">
                     <div class="nk-portfolio-item nk-portfolio-item-square nk-portfolio-item-info-style-1">
-                        <a href="portfolio-single.html" class="nk-portfolio-item-link"></a>
+                        <a href="maer-jono.html" class="nk-portfolio-item-link"></a>
                         <div class="nk-portfolio-item-image">
-                            <div style="background-image: url('assets/images/portfolio-7-sm.jpg');"></div>
+                            <div style="background-image: url('assets/img/BreakInequality/HomePageBreakInequality.jpg');"></div>
                         </div>
                         <div class="nk-portfolio-item-info nk-portfolio-item-info-center text-xs-center">
                             <div>
-                                <h2 class="portfolio-item-title h3">Vinyl Record</h2>
+                                <h2 class="portfolio-item-title h3">Maer Jono</h2>
                                 <div class="portfolio-item-category">Mockup</div>
                             </div>
                         </div>
