Added images to slot machine

--- a/New/index.html
+++ b/New/index.html
@@ -334,16 +334,16 @@
                 </div>
 
 
-                <div class="nk-isotope-item" data-filter="Branding">
+                <div class="nk-isotope-item" data-filter="Circuits">
                     <div class="nk-portfolio-item nk-portfolio-item-square nk-portfolio-item-info-style-1">
-                        <a href="portfolio-single.html" class="nk-portfolio-item-link"></a>
+                        <a href="slot-machine.html" class="nk-portfolio-item-link"></a>
                         <div class="nk-portfolio-item-image">
-                            <div style="background-image: url('assets/images/portfolio-5-sm.jpg');"></div>
+                            <div style="background-image: url('assets/img/SlotMachine/top.jpg');"></div>
                         </div>
                         <div class="nk-portfolio-item-info nk-portfolio-item-info-center text-xs-center">
                             <div>
-                                <h2 class="portfolio-item-title h3">Minimal Bag</h2>
-                                <div class="portfolio-item-category">Branding</div>
+                                <h2 class="portfolio-item-title h3">Slot Machine</h2>
+                                <div class="portfolio-item-category">Circuits</div>
                             </div>
                         </div>
                     </div>
